--- a/cap05/css/estilos.css
+++ b/cap05/css/estilos.css
@@ -12,8 +12,13 @@ img.alta{
 
 h1{
     border-bottom-style: inset;
+    text-align: center;
 }
 
 pre{
     font-size: 1.2em;
+}
+
+form{
+    text-align: center;
 }
